--- a/DESAFIO/d012/estilo/style.css
+++ b/DESAFIO/d012/estilo/style.css
@@ -1,5 +1,9 @@
 @charset "UTF-8"
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
@@ -9,17 +13,21 @@ html, body {
     min-width: 100vh;
     background-color: darkgray;
     margin: 0px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header {
     background-color: black;
     color: white;
     text-align: center;
+    padding-bottom: 10px;
 }
 
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: 'Passion One', cursive;
+    font-size: 10vh;
 }
 
 header > p{
@@ -41,6 +49,8 @@ section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
+    font-family: 'Sriracha', cursive;;
+    font-size: 5vh;
 }
 
 section.normal {
