completei o projeto-cordel

--- a/DESAFIO/d012/estilo/style.css
+++ b/DESAFIO/d012/estilo/style.css
@@ -17,6 +17,7 @@ html, body {
 }
 
 header {
+    display: block;
     background-color: black;
     color: white;
     text-align: center;
@@ -45,12 +46,16 @@ header a:hover, footer a:hover {
 }
 
 section {
-    line-height: 2em;
+    line-height: 1.5em;
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
     font-family: 'Sriracha', cursive;;
     font-size: 5vh;
+}
+
+section > p {
+    padding-bottom: 4em;
 }
 
 section.normal {
@@ -61,11 +66,26 @@ section.normal {
 section.imagem {
     background-color: rgb(66, 66, 66);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.486);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.233);
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.555);
+    box-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url(..//imagens/background002.jpg);
+    background-position: center center ;
 }
 
 footer {
